# ollm

./: .gitignore  README.md  justfile  pyproject.toml
entrypoint/baselines/hearst/: evaluate.sh  export_final.sh  hp_search.sh  main.sh
entrypoint/baselines/llms4ol/: eval.sh  evaluate.sh  export_concepts.sh  hp_search.sh  predict_concepts.sh  predict_links.sh  train_links.sh
entrypoint/baselines/memorisation/: evaluate.sh
entrypoint/baselines/prompting/: eval.sh  evaluate.sh  export.sh  export_cot.sh  hp_search.sh  main.sh  main_cot.sh
entrypoint/baselines/rebel/: evaluate.sh  hp_search.sh  main.sh
entrypoint/dataset/: build_arxiv.sh  build_wikipedia.sh  download_arxiv.sh  download_wikipedia.sh  linearise_arxiv.sh  linearise_wikipedia.sh
entrypoint/ollm/: evaluate.sh  hp_search.sh  inference.sh  train_arxiv.sh  train_wikipedia.sh
entrypoint/slurm/: launch.sh  launch_gpu.sh
ollm/dataset/: data_model.py  train_test_split.py
ollm/dataset/arxiv/: __init__.py  build_categories.py  build_pages.py  export_graph.py
ollm/dataset/wikipedia/: __init__.py  build_categories.py  build_pages.py  export_graph.py  template.txt
ollm/eval/: graph_metrics.py  hp_search.py  test_metrics.py
ollm/experiments/: build_linearised_dataset.py  post_processing.py  templates.py
ollm/experiments/baselines/hearst/: export_graph.py  export_graph_with_ground_truth.py  hearst.rules  make_txt.py  patterns.clj  svd_ppmi.py
ollm/experiments/baselines/link_prediction/: inference.py  train.py
ollm/experiments/baselines/llms4ol/: export_concepts.py  predict_concepts.py  predict_links.py
ollm/experiments/baselines/llms4ol/concept_discovery/: export_concepts.py
ollm/experiments/baselines/llms4ol/link_prediction/: predict_links.py  train.py
ollm/experiments/baselines/memorisation/: export_graph.py
ollm/experiments/baselines/prompting/: export_graph.py  main.py  main_cot.py
ollm/experiments/baselines/rebel/: export_graph.py  export_graph_with_ground_truth.py  main.py
ollm/experiments/ollm/: export_model.py  inference.py
ollm/experiments/ollm/training/: config.py  main.py  main_weighted.py  utils.py
ollm/utils/: __init__.py  data.py  embedding.py  http.py  jinja.py  logging.py  nx_to_gt.py  plotting.py  rate_limit.py  textqdm.py  torch_utils.py  types.py  wandb.py
