[project]
authors = [{ name = "Andy Lo", email = "andylolu24@gmail.com" }]
description = "Add a short description here"
name = "ollm"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [
    "arxiv-base",
    "kaggle",
    "scienceplots",
    "ml-collections",
    "trl",
    "peft",
    "torch-geometric",
    "accelerate",
    "transformers",
    "absl-py",
    "networkx",
    "datasets",
    "tensorboardx",
    "wandb",
    "torch",
    "ruff",
    "mypy",
    "python-dotenv",
    "vllm",
    "evaluate",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch", "nvidia", "pyg"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ollm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.10.*"
uwsgi = "*"
graph-tool = "*"
numba = "*"

[tool.mypy]
ignore_missing_imports = true
